--- a/MusicClubManager.Cms.Blazor/Components/LineupFilters.razor
+++ b/MusicClubManager.Cms.Blazor/Components/LineupFilters.razor
@@ -1,63 +1,47 @@
-﻿<EditForm Model="Model" OnValidSubmit="() => OnFilter.InvokeAsync(Model)">
-    <div>
-        <label>Scoped</label>
-
+﻿<Form TModel="LineupFilter" Model="Model" OnValidSubmit="(args) => OnFilter.InvokeAsync(args)" Context="model">
+    <Template>
         <div>
-            <InputRadioGroup Name="scoped" @bind-Value="Model.Scoped">
-                <label>
-                    <InputRadio Name="scoped" Value="@true" />
-                    Yes
-                </label>
+            <div>
+                <label for="Name">Name</label>
 
-                <label>
-                    <InputRadio Name="scoped" Value="@false" />
-                    No
-                </label>
-            </InputRadioGroup>
+                <InputText @bind-Value="model.Name" type="text" id="Name" />
+            </div>
+
+            <div>
+                <label for="SortProperty">Sort property</label>
+
+                <InputSelect @bind-Value="model.SortProperty" id="SortProperty">
+                    <option value="@nameof(ArtistResult.Id)">@nameof(ArtistResult.Id)</option>
+                    <option value="@nameof(ArtistResult.Name)">@nameof(ArtistResult.Name)</option>
+                </InputSelect>
+            </div>
+
+            <div>
+                <label>Sort direction</label>
+
+                <div>
+                    <InputRadioGroup Name="SortDirection" @bind-Value="model.SortDirection">
+                        <label>
+                            <InputRadio Name="SortDirection" Value="SortDirection.Ascending" />
+                            @SortDirection.Ascending.ToString()
+                        </label>
+
+                        <label>
+                            <InputRadio Name="SortDirection" Value="SortDirection.Descending" />
+                            @SortDirection.Descending.ToString()
+                        </label>
+                    </InputRadioGroup>
+                </div>
+            </div>
         </div>
-    </div>
 
+        <Buttons>
+            <li><button type="submit">Filter</button></li>
 
-    <div>
-        <label for="Name">Name</label>
-
-        <InputText @bind-Value="Model.Name" type="text" id="Name" />
-    </div>
-
-    <div>
-        <label for="SortProperty">Sort property</label>
-
-        <InputSelect @bind-Value="Model.SortProperty" id="SortProperty">
-            <option value="@nameof(ArtistResult.Id)">@nameof(ArtistResult.Id)</option>
-            <option value="@nameof(ArtistResult.Name)">@nameof(ArtistResult.Name)</option>
-        </InputSelect>
-    </div>
-
-    <div>
-        <label>Sort direction</label>
-
-        <div>
-            <InputRadioGroup Name="SortDirection" @bind-Value="Model.SortDirection">
-                <label>
-                    <InputRadio Name="SortDirection" Value="SortDirection.Ascending" />
-                    @SortDirection.Ascending.ToString()
-                </label>
-
-                <label>
-                    <InputRadio Name="SortDirection" Value="SortDirection.Descending" />
-                    @SortDirection.Descending.ToString()
-                </label>
-            </InputRadioGroup>
-        </div>
-    </div>
-
-    <div class="buttons">
-        <button type="submit">Filter</button>
-
-        <button type="button" @onclick="ClearLineupFilter">Clear</button>
-    </div>
-</EditForm>
-
+            <li><button type="button" @onclick="ClearLineupFilter">Clear</button></li>
+        </Buttons>
+    </Template>
+</Form>
 
 @code {
     [Parameter, EditorRequired]
