--- a/MusicClubManager.Cms.Blazor/Pages/Lineup/Artist/Create.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Lineup/Artist/Create.razor
@@ -1,4 +1,4 @@
-﻿@page "/lineups/{lineupId:int}/create-artist"
+﻿@page "/lineups/{lineupId:int}/performances/create-artist"
 
 @layout LineupLayout
 
