--- a/MusicClubManager.Cms.Blazor/wwwroot/css/app.css
+++ b/MusicClubManager.Cms.Blazor/wwwroot/css/app.css
@@ -104,6 +104,12 @@ div#app {
     min-height: 100vh;
 }
 
+ul.item {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    gap: .5em;
+}
 
 
 /*        form > div > a {
