--- a/MusicClubManager.Cms.Blazor/Components/Lineup/LineupItem.razor.css
+++ b/MusicClubManager.Cms.Blazor/Components/Lineup/LineupItem.razor.css
@@ -1,4 +1,4 @@
-﻿div {
+﻿/*div {
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -10,3 +10,4 @@ div > ul {
     gap: .5em;
     list-style-type: none;
 }
+*/
