--- a/MusicClubManager.Cms.Blazor/Pages/Lineup/Edit.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Lineup/Edit.razor
@@ -5,7 +5,7 @@
 @inject ILineupService LineupApiService
 @inject NavigationManager NavigationManager
 
-<SubTitle ReturnUrl="lineups">
+<SubTitle ReturnUrl="lineups" ReturnTitle="Lineups">
     Edit
 </SubTitle>
 
