--- a/MusicClubManager.Cms.Blazor/Pages/Lineup/Filters.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Lineup/Filters.razor
@@ -4,7 +4,7 @@
 
 @inject NavigationManager NavigationManager
 
-<SubTitle ReturnUrl="lineups">
+<SubTitle ReturnUrl="lineups" ReturnTitle="Lineups">
     Filters
 </SubTitle>
 
