--- a/MusicClubManager.Cms.Blazor/Components/Shared/Return.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Shared/Return.razor
@@ -1,8 +1,11 @@
 ﻿<span>
-    <NavLink href="@Href">&larr;</NavLink>
+    <NavLink href="@Href">&larr; @Title</NavLink>
 </span>
 
 @code {
     [Parameter, EditorRequired]
-    public string? Href { get; set; }
+    public required string Href { get; set; }
+
+    [Parameter, EditorRequired]
+    public required string Title { get; set; }
 }
