--- a/MusicClubManager.Cms.Blazor/_Imports.razor
+++ b/MusicClubManager.Cms.Blazor/_Imports.razor
@@ -13,6 +13,7 @@
 @using MusicClubManager.Cms.Blazor.Components
 @using MusicClubManager.Cms.Blazor.Components.Artist
 @using MusicClubManager.Cms.Blazor.Components.Lineup
+@using MusicClubManager.Cms.Blazor.Components.Performance
 @using MusicClubManager.Cms.Blazor.Components.Shared
 @using MusicClubManager.Cms.Blazor.Models.Contexts
 @using MusicClubManager.Cms.Blazor.Models.FormModels
