--- a/MusicClubManager.Cms.Blazor/Components/Lineup/CreateEditPerformance.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Lineup/CreateEditPerformance.razor
@@ -1,35 +1,23 @@
-﻿@if (Model is not null)
-{
-    <DataAnnotationsValidator></DataAnnotationsValidator>
+﻿<div>
+    <label for="start">Start</label>
 
-    <ValidationSummary></ValidationSummary>
+    <InputDate Type="InputDateType.DateTimeLocal" @bind-Value="Model.Start" id="start" />
+</div>
 
-    <div>
-        <div>
-            <label for="start">Start</label>
+<div>
+    <label for="duration">Duration</label>
 
-            <InputDate Type="InputDateType.DateTimeLocal" @bind-Value="Model.Start" id="start" />
-        </div>
+    <InputNumber @bind-Value="Model.Duration" id="duration" />
+</div>
 
-        <div>
-            <label for="duration">Duration</label>
+<div>
+    <label for="type">Type</label>
 
-            <InputNumber @bind-Value="Model.Duration" id="duration" />
-        </div>
+    <InputText @bind-Value="Model.Type" id="type" />
+</div>
 
-        <div>
-            <label for="type">Type</label>
-
-            <InputText @bind-Value="Model.Type" id="type" />
-        </div>
-    </div>
-}
-else
-{
-    <p>Loading...</p>
-}
 
 @code {
     [Parameter, EditorRequired]
-    public CreateEditLineupPerformanceFormModel? Model { get; set; }
+    public required CreateEditLineupPerformanceFormModel Model { get; set; }
 }
